tests/NormalTests/paczka1/fuzzy1/29586722.err
Error in line 15: Os3kcBQ A973 57,0
Error in line 7: HPJDfcY A973 2803,5
Error in line 16: Os3kcBQ S116 18,0
Error in line 11: A973 A972 13,4
Error in line 28: A973 S857 33,2
Error in line 32: 1umXu1QkP2M A973 31,0
